force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rental_Adjustment_Factor_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rental_Adjustment_Factor_F__c</fullName>
    <description>Fixed Rental Adjustment Factor that is applied at each reset date. Leave this blank if there is a pre-agreed schedule of adjustment factors.</description>
    <formula>Null /*Floating_Rent_Inputs__r.Adjustment_Factor__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fixed Rental Adjustment Factor that is applied at each reset date.</inlineHelpText>
    <label>Z_Unused_2012 Rental Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>