force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Start_Date__c</fullName>
    <inlineHelpText>The first day of the first Rent Slip of this Rent Schedule. By default it is the Lease Start Date or the day after the last day of the previous Rent Schedule.</inlineHelpText>
    <label>Rent Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>