force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>