force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Weekday_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Weekday_Number__c</fullName>
    <description>Specifies the occurrence of the selected weekday in the month when the Rent Due Type is set to Fixed Day in a Week.</description>
    <inlineHelpText>Select the occurrence of the chosen weekday in the month (e.g., 1 = 1st Monday, 4 = 4th Monday).</inlineHelpText>
    <label>Weekday Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>