force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/Local_Currency_local__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency_local__c</fullName>
    <description>Represents the currency to be displayed on the Invoices.</description>
    <inlineHelpText>Select the currency to be displayed on the Invoices for this rent schedule</inlineHelpText>
    <label>Transaction  Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>