force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/pro_Base_Rent_Target__c.field-meta.xml
<CustomField>
    <fullName>pro_Base_Rent_Target__c</fullName>
    <description>Used as the foundational currency conversion formula for the Base Rent.</description>
    <formula>IF( ISPICKVAL(leaseworks__Billing_Currency__c,&#39;USD&#39;),
			leaseworks__Base_Rent_New__c, (leaseworks__Base_Rent_New__c *  pro_Currency_Rates__r.leaseworks__Rate_New__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Rent (Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>