force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/pro_Currency_Rates__c.field-meta.xml
<CustomField>
    <fullName>pro_Currency_Rates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Currency Rates object. Used to aid with Currency Conversion calculations for non USD Rent Schedules</description>
    <label>Currency Rates</label>
    <referenceTo>leaseworks__Currency_Rates__c</referenceTo>
    <relationshipLabel>Rent Schedule</relationshipLabel>
    <relationshipName>Rent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>