force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/Rent_Schedule_External_id__c.field-meta.xml
<CustomField>
    <fullName>Rent_Schedule_External_id__c</fullName>
    <description>Unique key to map with Rent slips. This was added at the time of implementation.</description>
    <label>Rent Schedule External id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>