force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/Adhoc_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Adhoc_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Ad_hoc_Schedule_Local__c ) &amp;&amp; PRIORVALUE( Ad_hoc_Schedule_Local__c )=true</errorConditionFormula>
    <errorMessage>Disabling &apos;Ad hoc Schedule&apos; through this button is not allowed. For further assistance, please reach out to leaseworks support.</errorMessage>
</ValidationRule>