force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Business_Days_Prior.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Business_Days_Prior</fullName>
    <active>true</active>
    <description>If Rent Type is &apos;Floating&apos;, Business Days Prior cannot be beyond 31</description>
    <errorConditionFormula>and (
						contains(text(leaseworks__Rent_Type__c),&apos;Floating Rent&apos;),
						(leaseworks__Business_Days_Prior__c &gt; 31)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Business_Days_Prior__c</errorDisplayField>
    <errorMessage>Only numbers from 0 to 31 are allowed, please check your entry.</errorMessage>
</ValidationRule>