force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__DolAmt_False_IncreaseDecrease_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DolAmt_False_IncreaseDecrease_Needed</fullName>
    <active>false</active>
    <description>/* Since this validation is moved to Stepped MultiRent Object level. Hence Inactivating this Validation */  If Amount increase/decrease? is False , %Increase/Decrease is mandatory</description>
    <errorConditionFormula>False</errorConditionFormula>
    <errorDisplayField>leaseworks__Rent_Percent__c</errorDisplayField>
    <errorMessage>Please Enter %Increase/Decrease</errorMessage>
</ValidationRule>