force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__DollarAmt_True_RentAmt_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DollarAmt_True_RentAmt_Needed</fullName>
    <active>false</active>
    <description>/* Since this validation is moved to Stepped MultiRent Object level. Hence Inactivating this Validation */  If Amount increase/decrease? is True , Rent Amount is mandatory</description>
    <errorConditionFormula>False</errorConditionFormula>
    <errorMessage>Please Enter Rent Amount.</errorMessage>
</ValidationRule>