force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Escalation_Required_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Escalation_Required_Check</fullName>
    <active>true</active>
    <description>Escalation Start Date and Percentage are required together</description>
    <errorConditionFormula>OR(
and(leaseworks__Escalation__c &gt;0 ,OR(ISBLANK(leaseworks__Escalation_Start_Date__c),ISNULL(leaseworks__Escalation_Start_Date__c)) 
),
and(OR(! ISBLANK( leaseworks__Escalation_Start_Date__c ), !ISNULL(leaseworks__Escalation_Start_Date__c)) , ISNULL( leaseworks__Escalation__c ) )
)</errorConditionFormula>
    <errorMessage>Escalation Start Date and Percentage must be entered together</errorMessage>
</ValidationRule>