force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__EscalationDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__EscalationDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(!ISBLANK( leaseworks__Escalation_Start_Date__c ), !ISNULL(leaseworks__Escalation_Start_Date__c)),
  OR(leaseworks__Escalation_Start_Date__c &gt; leaseworks__Rent_End_Date__c , leaseworks__Escalation_Start_Date__c &lt; leaseworks__Start_Date__c ) ,
 false)</errorConditionFormula>
    <errorMessage>Escalation Start date must fall between the Rent Start date &amp; Rent End Date (inclusive).</errorMessage>
</ValidationRule>