force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__ExtRentTypemandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ExtRentTypemandatory</fullName>
    <active>false</active>
    <description>If the &quot;Extended Rent Period?&quot; checkbox is checked, a value must be selected for Extended Rent Type.</description>
    <errorConditionFormula>false /*AND(Extended_Rent_Period__c,Text(Extended_Rent_Type__c)==Null)*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Extended_Rent_Type__c</errorDisplayField>
    <errorMessage>If the &quot;Extended Rent Period?&quot; checkbox is checked, a value must be selected for Extended Rent Type.</errorMessage>
</ValidationRule>