force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__ExtRentVsExtRentType.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ExtRentVsExtRentType</fullName>
    <active>false</active>
    <description>If the &quot;Extended Rent Period?&quot; checkbox is NOT checked, Extended Rent Type value can only be Null</description>
    <errorConditionFormula>false /*AND(!Extended_Rent_Period__c, 
OR(
Text(Extended_Rent_Type__c)==&apos;Extended at Current Rent Rate&apos;,
Text(Extended_Rent_Type__c)==&apos;Extended at Holdover Rent Rate&apos;)
)*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Extended_Rent_Type__c</errorDisplayField>
    <errorMessage>If the &quot;Extended Rent Period?&quot; checkbox is NOT checked, Extended Rent Type value can only be null.</errorMessage>
</ValidationRule>