force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Hour_Rates_and_Month_Thresholds_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Hour_Rates_and_Month_Thresholds_Needed</fullName>
    <active>false</active>
    <description>@Deprecated  2019/12 release
    /*Hour_Rates_and_Month_Thresholds_Needed if Rent type is PBH,*/</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>If Rent Type is &apos;Power By The Hour&apos;, Month Thresholds and PBH Rates must be specified.</errorMessage>
</ValidationRule>