force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Low_Season_Start_End_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Low_Season_Start_End_Dates</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Low Season End Date must be on or after Low Season start Date and Low season cannot span more than 12 months.</errorMessage>
</ValidationRule>