force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__LowSeasonStartvsEndDates.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LowSeasonStartvsEndDates</fullName>
    <active>true</active>
    <description>When lowRentStartYear == lowRentEndYear and lowSeasonMonth &gt; lowEndMonth then display the below error message</description>
    <errorConditionFormula>AND( ISPICKVAL(leaseworks__Rent_Type__c, &apos;Seasonal Rent&apos;), OR(VALUE(leaseworks__Low_Season_Start_Year__c) &gt; VALUE(leaseworks__Low_Season_End_Year__c), AND(leaseworks__Low_Season_Start_Year__c == leaseworks__Low_Season_End_Year__c , CASE(
TEXT(leaseworks__Low_Season_Start_Month__c),
&apos;January&apos;,1,
&apos;February&apos;,2,
&apos;March&apos;,3,
&apos;April&apos;,4,
&apos;May&apos;,5,
&apos;June&apos;,6,
&apos;July&apos;,7,
&apos;August&apos;,8,
&apos;September&apos;,9,
&apos;October&apos;,10,
&apos;November&apos;,11,
12) &gt; CASE(
TEXT(leaseworks__Low_Season_End_Month__c),
&apos;January&apos;,1,
&apos;February&apos;,2,
&apos;March&apos;,3,
&apos;April&apos;,4,
&apos;May&apos;,5,
&apos;June&apos;,6,
&apos;July&apos;,7,
&apos;August&apos;,8,
&apos;September&apos;,9,
&apos;October&apos;,10,
&apos;November&apos;,11,
12))))</errorConditionFormula>
    <errorMessage>Low Season ending date must be later than Low Season starting date. Please correct your date selections.</errorMessage>
</ValidationRule>