force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__LowSeasonStartvsEndMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LowSeasonStartvsEndMonth</fullName>
    <active>true</active>
    <description>if low season start and end year are the same, then low season start and end month cannot be same</description>
    <errorConditionFormula>AND( ISPICKVAL(leaseworks__Rent_Type__c, &apos;Seasonal Rent&apos;), AND(VALUE(leaseworks__Low_Season_Start_Year__c) ==  VALUE(leaseworks__Low_Season_End_Year__c) ,  CASE(
TEXT(leaseworks__Low_Season_Start_Month__c),
&apos;January&apos;,1,
&apos;February&apos;,2,
&apos;March&apos;,3,
&apos;April&apos;,4,
&apos;May&apos;,5,
&apos;June&apos;,6,
&apos;July&apos;,7,
&apos;August&apos;,8,
&apos;September&apos;,9,
&apos;October&apos;,10,
&apos;November&apos;,11,
12) == CASE(
TEXT(leaseworks__Low_Season_End_Month__c),
&apos;January&apos;,1,
&apos;February&apos;,2,
&apos;March&apos;,3,
&apos;April&apos;,4,
&apos;May&apos;,5,
&apos;June&apos;,6,
&apos;July&apos;,7,
&apos;August&apos;,8,
&apos;September&apos;,9,
&apos;October&apos;,10,
&apos;November&apos;,11,
12)))</errorConditionFormula>
    <errorMessage>Low season start and end month cannot be same</errorMessage>
</ValidationRule>