force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__ProvideFloatingFormulaForFloatingRent.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ProvideFloatingFormulaForFloatingRent</fullName>
    <active>true</active>
    <description>The Floating formula is mandatory when the Rent Type is &#39;Floating Rent&#39;</description>
    <errorConditionFormula>AND(ISPICKVAL(leaseworks__Rent_Type__c, &#39;Floating Rent&#39;) , ISBLANK(TEXT(leaseworks__Floating_Formula__c)))</errorConditionFormula>
    <errorMessage>Please provide Floating Formula for Floating Rent Type</errorMessage>
</ValidationRule>