force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Rent_Start_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Rent_Start_Date_End_Date</fullName>
    <active>true</active>
    <description>Rent Start Date cannot be later than Rent End Date.</description>
    <errorConditionFormula>leaseworks__Rent_End_Date__c &lt; leaseworks__Start_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>Rent Start Date cannot be later than Rent End Date.</errorMessage>
</ValidationRule>