force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Rent_Start_vs_Lease_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Rent_Start_vs_Lease_Start_Date</fullName>
    <active>false</active>
    <description>{Not Using}</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>Rent start date cannot be before lease start date</errorMessage>
</ValidationRule>