force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__RentDueTypeFixed.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RentDueTypeFixed</fullName>
    <active>true</active>
    <description>If Rent Due Type field is Fixed, then Rent Due Type value must be between 1 and 31.</description>
    <errorConditionFormula>and (
						contains(text(leaseworks__Rent_Due_Type__c),&apos;Fixed&apos;),
						OR(leaseworks__Rent_Due_Day__c &lt; 1, leaseworks__Rent_Due_Day__c &gt; 31)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Rent_Due_Day__c</errorDisplayField>
    <errorMessage>Rent Due Type &apos;Fixed&apos; has been selected, therefore value in Rent Due Day field must be between 1 and 31 (days in the calendar month)</errorMessage>
</ValidationRule>