force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__RentEndDateVsLeaseEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RentEndDateVsLeaseEndDate</fullName>
    <active>false</active>
    <description>Rent Studio Redesign 2021</description>
    <errorConditionFormula>False</errorConditionFormula>
    <errorDisplayField>leaseworks__Rent_End_Date__c</errorDisplayField>
    <errorMessage>Rent End Date cannot be after Lease End Date, except when ‘Extended Rent Period?’ checkbox is checked</errorMessage>
</ValidationRule>