force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__RentEndDateVsLeaseStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RentEndDateVsLeaseStartDate</fullName>
    <active>false</active>
    <description>Rent Studio Redesign 2021</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>leaseworks__Rent_End_Date__c</errorDisplayField>
    <errorMessage>Rent End Date cannot be before Lease Start Date</errorMessage>
</ValidationRule>