force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__RentEndDt_LeaseEndDt_RedlvryDt.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RentEndDt_LeaseEndDt_RedlvryDt</fullName>
    <active>false</active>
    <description>Rent End Date is before the Lease End Date. To use the Extended Rent Period option, please select a date that is after the Lease End Date.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>leaseworks__Rent_End_Date__c</errorDisplayField>
    <errorMessage>Rent End Date is before the Lease End Date. To use the Extended Rent Period option, please select a date that is after the Lease End Date.</errorMessage>
</ValidationRule>