force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__Step_Start_Cannot_be_Before_Rent_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Step_Start_Cannot_be_Before_Rent_Start</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>Rent Start Date Must Be Between Lease Start Date And Lease End Date Of The Lease.</errorMessage>
</ValidationRule>