force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__ValidatePositiveValueInAverageSLRAmont.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ValidatePositiveValueInAverageSLRAmont</fullName>
    <active>true</active>
    <errorConditionFormula>AND((leaseworks__Average_SLR_Amount__c &lt;= 0 ) , ISPICKVAL( leaseworks__SLR_Applicable__c , &#39;YES&#39;) )</errorConditionFormula>
    <errorDisplayField>leaseworks__Average_SLR_Amount__c</errorDisplayField>
    <errorMessage>Value cannot be zero or negative</errorMessage>
</ValidationRule>