force-app/main/default/objects/leaseworks__Stepped_Rent__c/validationRules/leaseworks__validateSLRApplicableANDSLRAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__validateSLRApplicableANDSLRAmount</fullName>
    <active>true</active>
    <description>Average SLR Amount is required when SLR Applicable? is marked as yes</description>
    <errorConditionFormula>ISPICKVAL( leaseworks__SLR_Applicable__c , &#39;YES&#39;) &amp;&amp; ISBLANK(  leaseworks__Average_SLR_Amount__c  )</errorConditionFormula>
    <errorMessage>Average SLR Amount is required when SLR Applicable? is marked as yes</errorMessage>
</ValidationRule>